[package]
name = "canvas-cli"
version = "0.1.0"
edition = "2021"

[lib]
name = "canvas_api"
path = "src/lib/lib.rs"

[[bin]]
name = "canvas_cli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.79"
chrono = { version = "0.4.34", features = ["serde"] }
clap = { version = "4.5.0", features = ["derive"] }
inquire = "0.6.2"
itertools = "0.12.1"
reqwest = "0.11.24"
serde = { version = "1.0.196", features = ["serde_derive"] }
serde_json = "1.0.113"
serde_toml = "0.0.1"
termcolor = "1.4.1"
thiserror = "1.0.56"
tokio = "1.36.0"
tracing = "0.1.40"
