[package]
name = "fuller"
authors = ["Grant Lemons <grantlemons@aol.com>"]
version = "0.1.3"
description = "CLI tool used to interact with Instructure Canvas LMS"
repository = "https://github.com/grantlemons/canvas-cli/"
license = "AGPL-3.0-only"
readme = "../README.md"
keywords = ["canvas", "lms", "canvas-cli", "fuller"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
fuller_canvas_api = { version = "0.1.3", path = "../fuller_canvas_api" }
fuller_canvas_auth = { version = "0.1.3", path = "../fuller_canvas_auth" }
fuller_config = { version = "0.1.3", path = "../fuller_config" }
clap = { version = "4.5.0", features = ["derive"] }
inquire = { version = "0.6.2", features = ["editor"] }
serde = { version = "1.0.196", features = ["serde_derive"] }
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
chrono = "0.4.34"

[dev-dependencies]
anyhow = "1.0.80"
itertools = "0.12.1"
