[package]
name = "fuller_canvas_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuller_canvas_auth = { path = "../fuller_canvas_auth" }
fuller_config = { path = "../fuller_config" }
anyhow = "1.0.79"
chrono = { version = "0.4.34", features = ["serde"] }
itertools = "0.12.1"
reqwest = { version = "0.11.24", features = ["json", "multipart"] }
serde = { version = "1.0.196", features = ["serde_derive"] }
serde_json = "1.0.113"
tokio = "1.36.0"
tracing = "0.1.40"
html2text = "0.12.4"
