[package]
name = "fuller_canvas_api"
authors = ["Grant Lemons <grantlemons@aol.com>"]
version = "0.1.0"
description = "API library used to interact with Canvas LMS used by the Fuller project"
repository = "https://github.com/grantlemons/canvas-cli/"
license = "GPL-3.0-only"
keywords = ["canvas_api", "fuller"]
edition = "2021"

[dependencies]
fuller_canvas_auth = { version = "0.1.0", path = "../fuller_canvas_auth" }
fuller_config = { version = "0.1.0", path = "../fuller_config" }
thiserror = "1.0.57"
chrono = { version = "0.4.34", features = ["serde"] }
reqwest = { version = "0.11.24", features = ["json", "multipart"] }
serde = { version = "1.0.196", features = ["serde_derive"] }
serde_json = "1.0.113"
tracing = "0.1.40"
html2text = "0.12.4"
