[package]
name = "fuller_canvas_auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuller_config = { path = "../fuller_config" }
keyring = "2.3.2"
oauth2 = "4.4.2"
serde = "1.0.197"
thiserror = "1.0.57"
tracing = "0.1.40"
