[package]
name = "fuller_canvas_auth"
authors = ["Grant Lemons <grantlemons@aol.com>"]
version = "0.1.0"
description = "Auth library to interact with Canvas LMS used by the Fuller project"
repository = "https://github.com/grantlemons/canvas-cli/"
license = "GPL-3.0-only"
keywords = ["canvas_api", "fuller"]
edition = "2021"

[dependencies]
fuller_config = { version = "0.1.0", path = "../fuller_config" }
keyring = "2.3.2"
oauth2 = "4.4.2"
serde = { version = "1.0.196", features = ["serde_derive"] }
thiserror = "1.0.57"
tracing = "0.1.40"
