[package]
name = "fuller_config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
serde = "1.0.197"
thiserror = "1.0.57"
toml = "0.8.10"
toml_edit = { version = "0.22.6", features = ["serde"] }
tracing = "0.1.40"

[build-dependencies]
dirs = "5.0.1"
