[package]
name = "fuller_config"
authors = ["Grant Lemons <grantlemons@aol.com>"]
version = "0.1.2"
description = "Utility used to interact with config files used by the Fuller project"
repository = "https://github.com/grantlemons/canvas-cli/"
license = "GPL-3.0-only"
keywords = ["canvas_api", "fuller"]
edition = "2021"

[dependencies]
dirs = "5.0.1"
serde = { version = "1.0.196", features = ["serde_derive"] }
thiserror = "1.0.57"
toml = "0.8.10"
toml_edit = { version = "0.22.6", features = ["serde"] }
tracing = "0.1.40"

[build-dependencies]
dirs = "5.0.1"
